Fix sidenav display overflow issue

--- a/frontend/src/styles/SideNav.css
+++ b/frontend/src/styles/SideNav.css
@@ -56,6 +56,7 @@
 
 .side_nav_display {
   width: calc(100vw - 190px);
+  overflow: scroll;
 }
 
 .arrow {
